[gd_scene load_steps=18 format=2]

[ext_resource path="res://Menú/background.png" type="Texture" id=1]
[ext_resource path="res://Menú/buttonss.png" type="Texture" id=2]
[ext_resource path="res://Menú/buttons.png" type="Texture" id=3]
[ext_resource path="res://Font/Adventurer.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Confirmation.gd" type="Script" id=5]
[ext_resource path="res://Audios/Game Jam Title Screen.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/Click.wav" type="AudioStream" id=7]
[ext_resource path="res://sfx/Cursor.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "FadeCreditos"

[sub_resource type="Animation" id=4]
resource_name = "Nubes"

[sub_resource type="Animation" id=5]
resource_name = "Parrallax"
length = 60.0

[sub_resource type="Animation" id=6]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "fadeblack2"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]

[node name="fondo" type="Sprite" parent="Sprite"]
position = Vector2( 513.247, 300 )
scale = Vector2( 0.532034, 0.555556 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = 169.0
margin_top = 73.0
margin_right = 821.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="TextureButton1" type="TextureButton" parent="."]
margin_left = 263.0
margin_top = 436.0
margin_right = 362.0
margin_bottom = 476.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="TextureButton1"]
margin_right = 99.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Intenar 
de nuevo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 615.0
margin_top = 432.0
margin_right = 714.0
margin_bottom = 472.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="TextureButton2"]
margin_right = 99.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeCreditos = SubResource( 3 )
anims/Nubes = SubResource( 4 )
anims/Parrallax = SubResource( 5 )
anims/fade = SubResource( 6 )
anims/fadeblack = SubResource( 7 )
anims/fadeblack2 = SubResource( 8 )
anims/fadeblackexit = SubResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0 )

[node name="cursor" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="mouse_entered" from="TextureButton1" to="." method="_on_TextureButton1_mouse_entered"]
[connection signal="pressed" from="TextureButton1" to="." method="_on_TextureButton1_pressed"]
[connection signal="mouse_entered" from="TextureButton2" to="." method="_on_TextureButton1_mouse_entered"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
